# engine-test

./: CMakeLists.txt
CMake/: FindGlew.cmake  FindGlfw.cmake
include/graphics/: shader.h  texture.h
include/loaders/: png_loader.h
include/window/: camera.h  events.h  window.h
lib/glew/OSX/: libGLEW.dylib
lib/glfw/include/GLFW/: glfw3.h
lib/glm/ext/: matrix_clip_space.inl
resource/shaders/: main.glslf  main.glslv
src/: main.cpp
src/graphics/: shader.cpp  texture.cpp
src/loaders/: png_loader.cpp
src/window/: camera.cpp  events.cpp  window.cpp
